--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "description": "A webhook endpoint for receiving data from Motive and saving it to an Excel file.",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "echo 'Build script placeholder'"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
     "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "xlsx": "^0.17.0"
   }
 }
-
